src/test/deca/context/valid/4_convfloat.deca
// Description:
//    Programme minimaliste utilisant une affectation nécessitant un ConvFloat.
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2022

{
        int i = 1;
        float j;
        j = i;
}
