src/test/deca/context/invalid/20_AndFloat.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 14: ContextualError: NotBooleanType
// 
// Historique:
//    cree le 01/01/2022

{
   float a = 1.0;
   boolean b = true;
   // Doit etre refuse.
   a && b;
}
